# nnue-pytorch

./: .gitignore  config.py  flake.nix  profile_bottlenecks.py  pyproject.toml  requirements.txt  ruff.toml  split_binpack.py  test_pretrain_sanity.py  test_tilelang_working.py  train.py
.github/workflows/: ruff-pr.yml
data_loader/: _native.py  dataset.py
data_loader/cpp/: CMakeLists.txt  test_features.cpp
loader/: Cargo.toml  README.md  pyproject.toml
loader/python/nnue_loader/: __init__.py  __init__.pyi  _internal.pyi
loader/src/: feature_extraction.rs  lib.rs  pipeline.rs  python_bridge.rs
loader/tests/: halfka_parity.rs
loader/tests/support/: cpp_reference.rs
model/: __init__.py  config.py  lightning_module.py  model.py
model/modules/feature_transformer/: functions.py  kernel.py  module.py
model/optimizers/: __init__.py  config.py  ranger22_wrapper.py
model/utils/: serialize.py
scratch/: envrun.sh  tl_smoke.py  tl_sparse_ft.py  tl_sparse_ft_bwd.py
scripts/: bench_loader_throughput.py  easy_train.py  sweep_loader_bench.py
tests/: test_feature_transformer.py  test_loader_close.py  test_train_ddp.py  validate_pace_ice.py
