[project]
name = "nnue-pytorch"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "nnue-loader",
  "psutil",
  "asciimatics",
  "GPUtil",
  "python-chess==0.31.4",
  "matplotlib",
  "tensorboard",
  "numba",
  "numpy<2.0",
  "requests",
  "lightning",
  "tyro",
  "ruff",
  "ranger21",
  "schedulefree",
  "cupy-cuda12x<14",
]

[tool.uv.sources]
nnue-loader = { workspace = true }

[tool.uv.workspace]
members = ["loader"]

[tool.setuptools]
py-modules = []
