[project]
name = "nnue-pytorch"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "nnue-loader",
  "psutil",
  "asciimatics",
  "GPUtil",
  "python-chess==0.31.4",
  "matplotlib",
  "tensorboard",
  "numba",
  "numpy<2.0",
  "requests",
  "lightning",
  "tyro",
  "ruff",
  "ranger22",
  "schedulefree",
  "cupy-cuda13x<14",
  "apache-tvm-ffi==0.1.9",
  "tilelang==0.1.8",
]

[tool.uv.sources]
nnue-loader = { path = "loader", editable = true }
ranger22 = { git = "https://github.com/rgodha24/ranger22" }

[tool.setuptools]
py-modules = []
