[package]
name = "nnue-loader"
version = "0.1.0"
edition = "2021"
description = "High-performance NNUE training data loader written in Rust"
license = "GPL-3.0"
repository = "https://github.com/yourusername/nnue-pytorch"
rust-version = "1.75"

[lib]
name = "nnue_loader"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
sfbinpack = "0.6.2"
crossbeam-channel = "0.5"
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[profile.profiling]
inherits = "release"
debug = true
